# DBeam

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
server/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/config/: env.ts
server/src/db/: crypto.ts  pool.ts  store.ts
server/src/middleware/: error.ts  validate.ts
server/src/repositories/: query.repo.ts  rows.repo.ts  schema.repo.ts
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mysql.rs
src-tauri/src/models/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/security/: keychain.rs  mod.rs
src-tauri/src/services/: store.rs
src-tauri/src/state/: mod.rs
src-tauri/src/telemetry/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/workspace/: mod.rs
src/ai/: mock-provider.ts  orchestrator.ts  providers.ts
src/diagrams/: ErdPanel.tsx  layout.ts
src/hooks/: use-desktop-bootstrap.ts
src/lib/: id.ts
src/migrations/: MigrationPanel.tsx
src/mock/: execute.ts  schema.ts
src/notebooks/: NotebookPanel.tsx
src/plugins/: api.ts
src/routes/: index.tsx
src/services/: bridge.ts  persistence.ts  queries.ts  window.ts
src/snippets/: SnippetsPanel.tsx
src/stores/: connections.ts  tabs.ts  ui.ts  workspace.ts
src/telemetry/: TelemetryPanel.tsx
src/types/: desktop.ts
src/workspace/: defaults.ts
(+19 files in other folders)
