[package]
name = "dbeam"
version = "0.3.0"
edition = "2021"
default-run = "dbeam"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dirs = "6"
keyring = "3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

